# pg_catalog_compatibility_table

./: .editorconfig  .env  .envrc  .gitignore  .pnp.js  Makefile  README.md  commit_convention.yml  compose.yaml  erd.md  flake.nix  go.mod  go.sum  gomod2nix.toml  index.js  index.ts  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.helix/: languages.toml
data/: columns.tsv  tables.tsv
data/10/: catalog:aggregate.tsv  catalog:amproc.tsv  catalog:attribute.tsv  catalog:class.tsv  catalog:database.tsv  catalog:event_trigger.tsv  catalog:foreign_data-wrapper.tsv  catalog:foreign_server.tsv  catalog:foreign_table.tsv  catalog:index.tsv  catalog:init_privs.tsv  catalog:language.tsv  catalog:operator.tsv  catalog:pg_default_acl.tsv  catalog:pg_index.tsv  catalog:pg_partitioned_table.tsv  catalog:pg_policy.tsv  catalog:pg_publication.tsv  catalog:pg_publication_rel.tsv  catalog:pg_statistic_ext.tsv  catalog:pg_subscription.tsv  catalog:pg_trigger.tsv  catalog:pg_ts_config_map.tsv  catalog:proc.tsv  catalog:rewrite.tsv  catalog:statistic.tsv  catalog:statistic_ext.tsv  catalog:subscription_rel.tsv  catalog:trigger.tsv  catalog:type.tsv  catalog:user_mapping.tsv  urls.diff  (+9 more)
migrations/: 072.up.sql  073.up.sql  074.up.sql  080.up.sql  081.up.sql  082.up.sql  083.up.sql  084.up.sql  090.up.sql  091.up.sql  092.up.sql  093.up.sql  094.up.sql  095.up.sql  096.up.sql  100.up.sql  110.up.sql  120.up.sql  130.up.sql  140.up.sql  150.up.sql
scripts/: download_site_archive.js  exploration.py  header.sql  make_erd.ts  refresh_site_files.sh  specific_table_changelog.sh
(+10699 files in other folders)
